CORE-15153: Fixing the layout issue for fragrance finder images.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/optionlist-filter/component/_optionlist-filter-by-category.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/optionlist-filter/component/_optionlist-filter-by-category.scss
@@ -291,14 +291,14 @@
   justify-content: flex-start;
 
   @include breakpoint($tablet) {
-    column-count: 4;
-    column-gap: 1.875rem;
-    margin: 2.875rem 0 0;
-    padding: 0 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 1.9375rem;;
   }
 
   @include breakpoint($only-tablet) {
     padding: 0 1.4375rem;
+    grid-gap: 1.5rem;;
   }
 
   @include breakpoint($only-mobile) {
@@ -315,38 +315,21 @@
 
   .title {
     position: relative;
-    width: calc((100% - 5.8125rem) / 4);
-    margin-#{$right}: 1.9375rem;
-    margin-bottom: 1.9375rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     min-height: 6.25rem;
     border: 0.1875rem solid $option-brand-logo-border;
     border-radius: 0.6875rem;
-    padding: 0.375rem;
-
-    @include breakpoint($only-tablet) {
-      margin-#{$right}: 1.5rem;
-      margin-bottom: 1.5rem;
-      width: calc((100% - 4.5rem) / 4);
-    }
 
     @include breakpoint($only-mobile) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.375rem;
       margin-#{$right}: 0.5rem;
       margin-bottom: 0.5rem;
       width: calc((100% - 0.5rem) / 2);
       min-height: 4.0625rem;
       border-width: 0.125rem;
-    }
 
-    @include breakpoint($tablet) {
-      &:nth-child(4n) {
-        margin-#{$right}: 0;
-      }
-    }
-
-    @include breakpoint($only-mobile) {
       &:nth-child(2n) {
         margin-#{$right}: 0;
       }
